<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">크누마켓</string>
    <string name="hello_world">로그인화면</string>
    <string name="action_settings">Settings</string>
    <string name="tab1">탭1</string>
    <string name="tab2">탭2</string>
    <string name="tab3">탭3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="title_activity_loading">Loading</string>
    <string name="product_name">상품명</string>
    <string name="product_price">가격</string>
    <string name="home">홈</string>
    <string name="addPost">등록</string>
    <string name="myPage">마이페이지</string>
    <string name="config">설정</string>
    <string name="search">검색</string>
    <string name="zzim">찜</string>
    <string name="notify">알림</string>
    <string name="mypage">마이페이지</string>
    <string name="TextInput">입력창</string>
    <string name="mypageTelephone">전화번호</string>
    <string name="mypageID">카톡 아이디</string>
    <string name="mypageInfo">추가정보</string>
    <string name="mypagePublic">공개여부</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_add_post">add_post</string>
    <string name="cat_high">대분류</string>
    <string name="cat_mid">중분류</string>
    <string name="cat_low">소분류</string>

    <string name="login_activity">Login화면Screen</string>
    <string name="username">폰번호mobile:</string>
    <string name="password">비번Password:</string>
    <string name="Login">Login:</string>

</resources>
