<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:gravity="right">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linear1"
            android:background="#ffff6f58">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="크누마켓icon"
                android:id="@+id/textView" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/button"
                android:layout_weight="0.33" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zzim"
                android:id="@+id/button2"
                android:layout_weight="0.33" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify"
                android:id="@+id/button3"
                android:layout_weight="0.33" />

        </LinearLayout>


        <TabHost
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/tabHost"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="top">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0">
                </FrameLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">
                </android.support.v4.view.ViewPager>

            </LinearLayout>
        </TabHost>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:background="@android:color/darker_gray">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/home"
                    android:id="@+id/btn_home"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/addPost"
                    android:id="@+id/btn_addPost"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/myPage"
                    android:id="@+id/btn_myPage"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/config"
                    android:id="@+id/btn_config"
                    android:layout_weight="1"
                    android:onClick="onClick"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
