<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="right">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linear1"
            android:background="#ffff6f58">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mypage"
                android:id="@+id/textView" />

            <Button
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button"
                android:layout_weight="0.33" />

            <Button
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button2"
                android:layout_weight="0.33" />

            <Button
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button3"
                android:layout_weight="0.33" />

        </LinearLayout>



        <!-- MyPage Layout -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/myPageLayout"
            android:layout_weight="1"
            android:background="@android:color/white">



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:id="@+id/profile01"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_empty"
                    android:id="@+id/profilePicture01"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/TextInput"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileTextEdit01"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/profile02"
                android:layout_weight="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:text="@string/mypageTelephone"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileText02"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/TextInput"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileTextEdit02"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/profile03"
                android:layout_weight="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:text="@string/mypageID"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileText03"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TextInput"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileTextEdit03"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/profile04"
                android:layout_weight="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:text="@string/mypageInfo"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileText04"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TextInput"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileTextEdit04"/>


            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/profile05"
                android:layout_weight="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:text="내 알림(버튼)"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileText05"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/profile06"
                android:layout_weight="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:text="내키워드(버튼"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileText06"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/profile07"
                android:layout_weight="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:text="내 찜(버튼)"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileText07"/>

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/mypagePublic"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileTextEdit07"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileCheck07"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/profile08"
                android:layout_weight="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:text="내 글(버튼)"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileText08"/>

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/mypagePublic"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:id="@+id/profileTextEdit08"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileCheck08"/>
            </LinearLayout>

        </LinearLayout>


        <!-- bottom buttons -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:background="@android:color/darker_gray">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="New Button"
                    android:id="@+id/button4"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="New Button"
                    android:id="@+id/button5"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="New Button"
                    android:id="@+id/button6"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="New Button"
                    android:id="@+id/button7"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!-- </RelativeLayout> -->

</LinearLayout>